compiler/testData/diagnostics/tests/delegatedProperty/missedGetter.fir.kt
val a: Int by <!DELEGATE_SPECIAL_FUNCTION_MISSING!>A()<!>

class A
